[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/Roboto-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/DeviceSwap.gd" type="Script" id=2]




[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[node name="DeviceSwap" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false,
"_editor_description_": "Allows the players to chose between using a gamepad or keyboard for input."
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MenuLabel" type="Label" parent="VBoxContainer"]
margin_right = 1920.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "Choose Your Device"
align = 1

[node name="Players" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 1920.0
margin_bottom = 316.0
size_flags_horizontal = 3

[node name="Player1" type="VBoxContainer" parent="VBoxContainer/Players"]
margin_right = 824.0
margin_bottom = 252.0
size_flags_horizontal = 3

[node name="PlayerLabel" type="Label" parent="VBoxContainer/Players/Player1"]
margin_right = 824.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "Player 1"
align = 1

[node name="Devices" type="VBoxContainer" parent="VBoxContainer/Players"]
margin_left = 828.0
margin_right = 1092.0
margin_bottom = 252.0

[node name="DeviceLabel" type="Label" parent="VBoxContainer/Players/Devices"]
margin_right = 264.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "Device"
align = 1

[node name="Keyboard" type="Label" parent="VBoxContainer/Players/Devices"]
margin_top = 64.0
margin_right = 264.0
margin_bottom = 124.0
custom_fonts/font = SubResource( 1 )
text = "Keyboard"
align = 1

[node name="Controller1" type="Label" parent="VBoxContainer/Players/Devices"]
margin_top = 128.0
margin_right = 264.0
margin_bottom = 188.0
custom_fonts/font = SubResource( 1 )
text = "Controller 1"
align = 1

[node name="Controller2" type="Label" parent="VBoxContainer/Players/Devices"]
margin_top = 192.0
margin_right = 264.0
margin_bottom = 252.0
custom_fonts/font = SubResource( 1 )
text = "Controller 2"
align = 1

[node name="Player2" type="VBoxContainer" parent="VBoxContainer/Players"]
margin_left = 1096.0
margin_right = 1920.0
margin_bottom = 252.0
size_flags_horizontal = 3

[node name="PlayerLabel" type="Label" parent="VBoxContainer/Players/Player2"]
margin_right = 824.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "Player 2"
align = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 320.0
margin_right = 1920.0
margin_bottom = 347.0
custom_styles/separator = SubResource( 2 )
custom_constants/separation = 27

[node name="ReadyButton" type="Button" parent="VBoxContainer"]
margin_top = 351.0
margin_right = 1920.0
margin_bottom = 417.0
custom_fonts/font = SubResource( 3 )
text = "Ready"

[node name="BackButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -66.0
margin_right = 212.0
custom_fonts/font = SubResource( 3 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="pressed" from="VBoxContainer/ReadyButton" to="." method="_on_ReadyButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="timeout" from="InputTimer" to="." method="_on_InputTimer_timeout"]
